--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -15,6 +15,7 @@
   --markprompt-overlay: #00000010;
   --markprompt-ring: #0ea5e9;
   --markprompt-radius: 8px;
+  --markprompt-button-radius: 0.375rem;
   --markprompt-text-size: 0.875rem;
   --markprompt-text-size-xs: 0.75rem;
   --markprompt-button-icon-size: 1rem;
@@ -1696,6 +1697,62 @@
 
 :where(.MarkpromptDefaultViewMessagePromptsContainer a:hover) {
   opacity: 0.8;
+}
+
+:where(.MarkpromptButton) {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--markprompt-background);
+  border: 1px solid var(--markprompt-border);
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  color: var(--markprompt-foreground);
+  border-radius: var(--markprompt-button-radius);
+  cursor: pointer;
+  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
+    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+}
+
+:where(.MarkpromptButton:hover) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptButton:focus-visible) {
+  border-color: var(--markprompt-foreground);
+  outline: none;
+}
+
+:where(.MarkpromptToolCallConfirmation) {
+  margin-inline: 1.35rem;
+  margin-block: 0.25rem;
+  padding-inline: 1rem;
+  padding-block-end: 1rem;
+  font-size: var(--markprompt-text-size);
+  border: 1px solid var(--markprompt-border);
+  border-radius: 0.375rem;
+}
+
+:where(.MarkpromptToolDescriptionWithStatus) {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+:where(.MarkpromptToolDescriptionWithStatus strong) {
+  font-weight: 500;
+}
+
+:where(.MarkpromptToolCallStatusIcon) {
+  flex-shrink: 0;
+  width: 1rem;
+  height: 1rem;
 }
 
 :where(.MarkpromptErrorMessage) {
