Upgrade to React 18, upgrade to Docusaurus 3

--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -175,8 +175,7 @@ button {
 }
 
 .MarkpromptAnswer {
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden auto;
   height: 100%;
   padding: 1rem 2rem;
   scroll-behavior: smooth;
