--- a/examples/with-function-calling/pages/global.css
+++ b/examples/with-function-calling/pages/global.css
@@ -97,9 +97,8 @@ body,
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  place-items: center;
   gap: 2rem;
-  justify-items: center;
   padding-top: 100px;
   font-size: 0.875rem;
 }
