--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -400,7 +400,6 @@
 
 :where(.MarkpromptChatView .MarkpromptForm) {
   position: relative;
-  background-color: var(--markprompt-background);
   flex-direction: column-reverse;
   align-items: stretch;
 }
@@ -1580,6 +1579,8 @@
 }
 
 :where(.MarkpromptChatActions) {
+  position: absolute;
+  top: -100%;
   display: flex;
   gap: 0.25rem;
   margin-bottom: 0.75rem;
@@ -1764,19 +1765,27 @@
   height: 1rem;
 }
 
-:where(.MarkpromptErrorMessage) {
-  padding-inline: 1.5rem;
-  padding-block: 0.75rem;
-  font-size: var(--markprompt-text-size);
-  background: var(--markprompt-error-background);
-  border-top: var(--markprompt-error-foreground);
-  color: var(--markprompt-error-foreground);
+:where(.MarkpromptError) {
+  padding-block: 1rem;
+  padding-inline: 2rem;
 }
 
-:where(.MarkpromptErrorMessage p) {
-  margin: 0;
+:where(.MarkpromptDefaultError) {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.125rem;
+  text-wrap: balance;
+}
+
+:where(.MarkpromptDefaultErrorIcon) {
+  font-size: 1.5rem;
   font-weight: 500;
-  text-wrap: pretty;
+  margin-block-end: 1rem;
+}
+
+:where(.MarkpromptDefaultError details) {
+  margin-block-start: 1rem;
+  font-size: var(--markprompt-text-size);
 }
 
 @keyframes markprompt-show-content {
