--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -422,6 +422,11 @@
 
 :where(.MarkpromptMessageAnswerContainer) {
   max-width: 100%;
+  padding: 0.5rem 0 3.75rem;
+}
+
+:where(.MarkpromptMessageAnswerContainer:has(+ .MarkpromptReferences)) {
+  padding: 0.5rem 0;
 }
 
 :where(.MarkpromptMessageAnswer) {
@@ -466,17 +471,13 @@
 :where(.MarkpromptMessagePrompt) {
   padding-inline: 1.5rem;
   background-color: var(--markprompt-muted);
-  border-top: 1px solid var(--markprompt-border);
   border-bottom: 1px solid var(--markprompt-border);
   position: relative;
   overflow: hidden;
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
 }
 
-:where(.MarkpromptAutoScroller .MarkpromptMessagePrompt:first-of-type) {
-  border-top: none;
-  margin-top: 0;
+:where(.MarkpromptMessage:has(+ .MarkpromptMessage) .MarkpromptMessagePrompt) {
+  border-top: 1px solid var(--markprompt-border);
 }
 
 :where(.MarkpromptMessagePromptText) {
@@ -577,7 +578,6 @@
   scroll-behavior: smooth;
   scrollbar-width: none;
   overflow: hidden auto;
-  padding-bottom: 3rem;
 }
 
 :where(.MarkpromptAutoScroller::-webkit-scrollbar) {
@@ -1147,8 +1147,7 @@
 
 :where(.MarkpromptReferences) {
   position: relative;
-  padding-top: 1rem;
-  padding-bottom: 0.5rem;
+  padding-block: 1rem 0.5rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
   font-size: 0.875rem;
@@ -1167,7 +1166,11 @@
 :where(.MarkpromptChatView .MarkpromptReferences) {
   background-color: unset;
   border-top: none;
-  padding-block: 0 1.5rem;
+  padding-block-end: 3.75rem;
+}
+
+:where(.MarkpromptMessage:has(+ .MarkpromptMessage) .MarkpromptReferences) {
+  padding-block-end: 1.5rem;
 }
 
 :where(.MarkpromptPromptView .MarkpromptReferences p) {
@@ -1768,17 +1771,19 @@
 :where(.MarkpromptError) {
   padding-block: 1rem;
   padding-inline: 2rem;
+  background-color: var(--markprompt-muted);
+  color: var(--markprompt-mutedForeground);
 }
 
 :where(.MarkpromptDefaultError) {
   display: flex;
   flex-direction: column;
-  font-size: 1.125rem;
+  font-size: 1rem;
   text-wrap: balance;
 }
 
 :where(.MarkpromptDefaultErrorIcon) {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 500;
   margin-block-end: 1rem;
 }
