--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2,7 +2,7 @@
   --markprompt-background: #fff;
   --markprompt-foreground: #171717;
   --markprompt-muted: #fafafa;
-  --markprompt-mutedForeground: #737373;
+  --markprompt-mutedForeground: #707070;
   --markprompt-border: #e5e5e5;
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
@@ -154,8 +154,12 @@
 :where(.MarkpromptOverlay) {
   position: fixed;
   inset: 0;
-  animation: markprompt-fade-in 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  animation: markprompt-fade-in 500ms cubic-bezier(0.16, 1, 0.3, 1);
   background-color: var(--markprompt-overlay);
+}
+
+:where(.MarkpromptOverlay[data-state='closed']) {
+  animation: markprompt-fade-out 500ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 :where(.MarkpromptContentDialog) {
@@ -167,13 +171,20 @@
   width: 100dvw;
   height: 100dvh;
   animation-name: markprompt-show-content;
-  animation-duration: 300ms;
+  animation-duration: 200ms;
   animation-fill-mode: both;
   transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
   color: var(--markprompt-foreground);
   overflow: hidden;
   display: grid;
   grid-template-rows: 1fr auto;
+}
+
+:where(.MarkpromptContentDialog[data-state='closed']) {
+  animation-name: markprompt-hide-content;
+  animation-duration: 100ms;
+  animation-fill-mode: both;
+  transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
 }
 
 @media screen and (pointer: fine) {
@@ -183,7 +194,7 @@
     box-shadow:
       hsl(206deg 22% 7% / 35%) 0 10px 38px -10px,
       hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
-    max-width: 37.5rem;
+    max-width: 44rem;
     max-height: 37.5rem;
     outline: 2px solid transparent;
     outline-offset: 2px;
@@ -502,6 +513,13 @@
 
 :where(.MarkpromptSearchIcon) {
   color: var(--markprompt-mutedForeground);
+  width: var(--markprompt-button-icon-size);
+  height: var(--markprompt-button-icon-size);
+  stroke-width: var(--markprompt-icon-stroke-width);
+}
+
+:where(.MarkpromptSearchIconAccented) {
+  color: var(--markprompt-foreground);
   width: var(--markprompt-button-icon-size);
   height: var(--markprompt-button-icon-size);
   stroke-width: var(--markprompt-icon-stroke-width);
@@ -1503,6 +1521,14 @@
   overflow: hidden;
 }
 
+:where(.MarkpromptSearchResultSectionHeading) {
+  padding: 0px 8px;
+  font-size: var(--markprompt-text-size-xs);
+  margin-top: 1rem;
+  margin-bottom: 0.25rem;
+  color: var(--markprompt-mutedForeground);
+}
+
 :where(.MarkpromptSearchResultHeading) {
   width: min-content;
   overflow: hidden;
@@ -1796,16 +1822,24 @@
 @keyframes markprompt-show-content {
   0% {
     opacity: 0;
-    transform: translate(-50%, -46%) scale(0.98);
-  }
-
-  50% {
-    transform: translate(-50%, -51%) scale(1.02);
+    transform: translate(-50%, -50%) scale(0.94);
   }
 
   100% {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@keyframes markprompt-hide-content {
+  0% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.98);
   }
 }
 
