--- a/examples/with-next/pages/global.css
+++ b/examples/with-next/pages/global.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgb(255 255 255 / 87%);
+  color: hsl(0, 0%, 4%);
   background-color: #fff;
   font-synthesis: none;
   text-rendering: optimizelegibility;
@@ -13,9 +13,9 @@
 
   --markprompt-background: #fff;
   --markprompt-foreground: #171717;
-  --markprompt-muted: #fafafa;
-  --markprompt-mutedForeground: #737373;
-  --markprompt-border: #e5e5e5;
+  --markprompt-muted: hsl(0, 0%, 98%);
+  --markprompt-mutedForeground: #808080;
+  --markprompt-border: hsl(0, 0%, 92%);
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
@@ -26,7 +26,7 @@
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
   --markprompt-ring: #0ea5e9;
-  --markprompt-radius: 8px;
+  --markprompt-radius: 0.75rem;
   --markprompt-text-size: 0.875rem;
   --markprompt-text-size-xs: 0.75rem;
   --markprompt-button-icon-size: 1rem;
@@ -63,20 +63,12 @@ html {
   box-sizing: inherit;
 }
 
+* {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 body {
   margin: 0;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
   font-weight: 400;
   line-height: 1.6;
   min-height: 100vh;
@@ -99,7 +91,7 @@ body,
   min-width: 400px;
   font-size: 14px;
   color: hsl(0, 0%, 50%);
-  background-color: hsl(0, 0%, 95%);
+  background-color: var(--markprompt-muted);
   border: 1px solid hsl(0, 0%, 92%);
   transition-property: all;
   transition-duration: 200ms;
@@ -130,8 +122,8 @@ body,
 
 #search kbd {
   color: hsl(0, 0%, 30%);
-  border: 1px solid hsl(0, 0%, 86%);
-  background-color: hsl(0, 0%, 98%);
+  border: 1px solid var(--markprompt-border);
+  background-color: hsl(0, 0%, 99%);
   padding-left: 6px;
   padding-right: 6px;
   padding-top: 3px;
