--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2,8 +2,9 @@
   --markprompt-background: #fff;
   --markprompt-foreground: #171717;
   --markprompt-muted: #fafafa;
-  --markprompt-mutedForeground: #707070;
+  --markprompt-mutedForeground: #888888;
   --markprompt-border: #e5e5e5;
+  --markprompt-border-accent: #cdcdcd;
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
@@ -14,7 +15,7 @@
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
   --markprompt-ring: #0ea5e9;
-  --markprompt-radius: 8px;
+  --markprompt-radius: 0.75rem;
   --markprompt-button-radius: 0.375rem;
   --markprompt-text-size: 0.875rem;
   --markprompt-text-size-xs: 0.75rem;
@@ -399,7 +400,6 @@
 
 :where(.MarkpromptClose kbd) {
   font-weight: 600;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 0.5rem;
 }
 
@@ -413,22 +413,22 @@
   position: relative;
   flex-direction: column-reverse;
   align-items: stretch;
+  padding: 1rem;
 }
 
 :where(.MarkpromptPromptWrapper) {
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  padding: 0 0.75rem;
+  background-color: var(--markprompt-muted);
+  border: 1px solid var(--markprompt-border);
+  border-radius: calc(var(--markprompt-radius) * 0.5);
+  transition-property: all;
+  transition-duration: 150ms;
 }
 
-:where(.MarkpromptChatView .MarkpromptPromptWrapper) {
-  border-top: 1px solid var(--markprompt-border);
-}
-
-:where(.MarkpromptPromptView .MarkpromptPromptWrapper),
-:where(.MarkpromptSearchView .MarkpromptPromptWrapper) {
-  border-bottom: 1px solid var(--markprompt-border);
+:where(.MarkpromptPromptWrapper):focus-within {
+  border: 1px solid var(--markprompt-border-accent);
 }
 
 :where(.MarkpromptMessageAnswerContainer) {
@@ -532,25 +532,59 @@
 :where(.MarkpromptPrompt) {
   border: none;
   width: 100%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-
   /*
     If the font-size of the prompt input is not at least 1rem (16px), Safari
     on iOS will automatically zoom to the prompt input
   */
   font-size: 1rem;
-  background-color: var(--markprompt-background);
   color: var(--markprompt-foreground);
   caret-color: var(--markprompt-primary);
+  background-color: transparent;
+  padding: 1rem 0.75rem;
 }
 
-:where(.MarkpromptPrompt::placeholder) {
+@media (min-width: 1024px) {
+  :where(.MarkpromptPrompt) {
+    font-size: var(--markprompt-text-size);
+  }
+}
+
+:where(.MarkpromptPrompt)::placeholder {
   color: var(--markprompt-mutedForeground);
 }
 
 :where(.MarkpromptPrompt:focus) {
   outline: none;
+}
+
+:where(.MarkpromptPromptWrapper) button {
+  margin-right: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  border: none;
+  outline: none;
+  color: var(--markprompt-background);
+  background-color: var(--markprompt-primary);
+  border-radius: calc(var(--markprompt-radius) * 0.5);
+  transition-property: all;
+  transition-duration: 150ms;
+  font-size: var(--markprompt-text-size);
+  font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+:where(.MarkpromptPromptWrapper) button:disabled {
+  background-color: var(--markprompt-background);
+  border: 1px solid var(--markprompt-border);
+  color: var(--markprompt-border-accent);
+}
+
+:where(.MarkpromptPromptWrapper) button svg {
+  width: 16px;
+  height: 16px;
+  stroke-width: 2px;
 }
 
 /* Remove 2px padding that some browsers add to input */
