--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -440,7 +440,7 @@
 }
 
 :where(.MarkpromptPromptWrapper):focus-within {
-  box-shadow: 0px 0px 0px 3px var(--markprompt-border);
+  box-shadow: 0px 0px 0px 2px var(--markprompt-border);
   border-color: var(--markprompt-border-accent);
 }
 
@@ -520,6 +520,11 @@
   height: 24px;
   flex: none;
   margin-top: 14px;
+  overflow: hidden;
+}
+
+:where(.MarkpromptMessageAvatarImage) {
+  border-radius: 9999px;
 }
 
 :where(.MarkpromptPrimaryIcon) {
