--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -458,6 +458,7 @@
   display: flex;
   flex-direction: row;
   padding-inline: 1.5rem;
+  padding-bottom: 1rem;
   gap: 1rem;
 }
 
@@ -509,7 +510,7 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
-  align-items: start;
+  align-items: flex-start;
 }
 
 :where(.MarkpromptMessage:has(+ .MarkpromptMessage) .MarkpromptMessagePrompt) {
@@ -1116,7 +1117,9 @@
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='icons']) {
-  padding: 0 1.5rem 0.75rem;
+  padding: 0 1.5rem;
+  margin-top: -0.25rem;
+  margin-bottom: -1rem;
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='text'] h3) {
@@ -1253,7 +1256,6 @@
 
 :where(.MarkpromptReferences) {
   position: relative;
-  padding: 1rem 1rem 1rem 2.5rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
   font-size: var(--markprompt-text-size-xs);
@@ -1280,7 +1282,6 @@
 }
 
 :where(.MarkpromptPromptView .MarkpromptReferences p) {
-  padding-inline: 2rem;
   margin-top: 0;
 }
 
@@ -1292,11 +1293,10 @@
   animation: markprompt-fade-in 300ms ease-out forwards 1;
   margin: 0;
   margin-bottom: 0.5rem;
-  padding-inline: 2rem;
+  padding-inline: 4rem 1rem;
 }
 
 .MarkpromptChatView .MarkpromptReferences p {
-  padding-inline: 1.5rem;
 }
 
 :where(.MarkpromptReferences ul) {
@@ -1323,7 +1323,7 @@
 
 :where(.MarkpromptChatView .MarkpromptReferences ul) {
   background-color: unset;
-  padding: 0.25rem 1.5rem 0.5rem;
+  padding: 0.25rem 1rem 0.5rem 4rem;
 }
 
 .MarkpromptReferences ul::-webkit-scrollbar {
