More code adaptations

--- a/examples/with-next/pages/global.css
+++ b/examples/with-next/pages/global.css
@@ -98,7 +98,8 @@ body,
 }
 
 #search:hover {
-  background-color: hsl(0, 0%, 93%);
+  background-color: hsl(0, 0%, 96%);
+  border: 1px solid hsl(0, 0%, 90%);
 }
 
 #search > span {
