--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -8,13 +8,13 @@
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
-  --markprompt-primaryMuted: #8285f4;
+  --markprompt-primaryMuted: #b4b6f8;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
-  --markprompt-ring: #e5e5e5;
+  --markprompt-ring: #b4b6f8;
   --markprompt-radius: 0.75rem;
   --markprompt-button-radius: 0.375rem;
   --markprompt-text-size: 0.875rem;
@@ -41,13 +41,13 @@
     --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
     --markprompt-primaryForeground: #fff;
-    --markprompt-primaryMuted: #8285f4;
+    --markprompt-primaryMuted: #b4b6f8;
     --markprompt-secondary: #0e0e0e;
     --markprompt-secondaryForeground: #fff;
     --markprompt-primaryHighlight: #ec4899;
     --markprompt-secondaryHighlight: #a855f7;
     --markprompt-overlay: #00000040;
-    --markprompt-ring: #2d2d2d;
+    --markprompt-ring: #b4b6f8;
     --markprompt-error-background: #450a0a;
     --markprompt-error-foreground: #fecaca;
   }
@@ -432,7 +432,7 @@
 :where(.MarkpromptPromptWrapper) {
   display: flex;
   align-items: center;
-  gap: 0.75rem;
+  gap: 0.5rem;
 }
 
 :where(.MarkpromptChatView .MarkpromptPromptWrapper) {
@@ -450,7 +450,7 @@
 }
 
 :where(.MarkpromptChatView .MarkpromptPromptWrapper):focus-within {
-  box-shadow: 0px 0px 0px 2px var(--markprompt-border);
+  box-shadow: 0px 0px 0px 3px var(--markprompt-border);
   border-color: var(--markprompt-border-accent);
 }
 
@@ -598,16 +598,15 @@
   outline: none;
 }
 
-:where(.MarkpromptPromptWrapper) button {
-  margin-right: 0.5rem;
-  padding: 0.5rem 0.75rem;
+:where(.MarkpromptPromptSubmitButton) {
+  padding: 0.375rem 0.75rem;
   border: none;
   outline: none;
   color: var(--markprompt-background);
   background-color: var(--markprompt-primary);
   border-radius: calc(var(--markprompt-radius) * 0.5);
   transition-property: all;
-  transition-duration: 150ms;
+  transition-duration: 200ms;
   font-size: var(--markprompt-text-size);
   font-weight: 600;
   display: flex;
@@ -616,6 +615,11 @@
   align-items: center;
   border: 1px solid transparent;
   cursor: pointer;
+  white-space: nowrap;
+}
+
+:where(.MarkpromptPromptWrapper) button:focus {
+  box-shadow: 0px 0px 0px 3px var(--markprompt-ring);
 }
 
 :where(.MarkpromptPromptWrapper) button:hover:not(:disabled) {
@@ -629,9 +633,19 @@
 }
 
 :where(.MarkpromptPromptWrapper) button svg {
-  width: 16px;
-  height: 16px;
+  width: 18px;
+  height: 18px;
   stroke-width: 2px;
+}
+
+:where(.MarkpromptPromptWrapper) button div {
+  width: 18px;
+  height: 18px;
+  position: relative;
+}
+
+:where(.MarkpromptAnimateSpin) {
+  animation: markprompt-spin 1s linear infinite;
 }
 
 /* Remove 2px padding that some browsers add to input */
@@ -1709,17 +1723,17 @@
 
 :where(.MarkpromptSelectToggle) {
   all: unset;
-  padding: 0.5rem;
+  padding: 0.375rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition-property: all;
+  transition-duration: 200ms;
   background-color: var(--markprompt-background);
   border: 1px solid var(--markprompt-border);
   border-radius: 0.375rem;
-  color: var(--markprompt-mutedForeground);
+  color: var(--markprompt-foreground);
   cursor: pointer;
-  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
-    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
 }
 
 :where(.MarkpromptSelectToggle:hover) {
@@ -2001,5 +2015,14 @@
   to {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@keyframes markprompt-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
