--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -618,7 +618,8 @@
   white-space: nowrap;
 }
 
-:where(.MarkpromptPromptWrapper) button:focus {
+.MarkpromptViews button:focus-visible {
+  outline: none;
   box-shadow: 0px 0px 0px 3px var(--markprompt-ring);
 }
 
