--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -8,7 +8,7 @@
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
-  --markprompt-primaryMuted: #b4b6f8;
+  --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
@@ -41,7 +41,7 @@
     --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
     --markprompt-primaryForeground: #fff;
-    --markprompt-primaryMuted: #b4b6f8;
+    --markprompt-primaryMuted: #8285f4;
     --markprompt-secondary: #0e0e0e;
     --markprompt-secondaryForeground: #fff;
     --markprompt-primaryHighlight: #ec4899;
