--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -198,7 +198,7 @@
       hsl(206deg 22% 7% / 35%) 0 10px 38px -10px,
       hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
     max-width: 44rem;
-    max-height: 37.5rem;
+    max-height: 40rem;
     outline: 2px solid transparent;
     outline-offset: 2px;
   }
@@ -459,7 +459,6 @@
   display: flex;
   flex-direction: row;
   padding-inline: 1.5rem;
-  margin-bottom: 3rem;
   gap: 1rem;
 }
 
@@ -516,6 +515,10 @@
 
 :where(.MarkpromptMessage:has(+ .MarkpromptMessage) .MarkpromptMessagePrompt) {
   border-top: 1px solid var(--markprompt-border);
+}
+
+:where(.MarkpromptMessage:has(+ .MarkpromptMessageAnswer)) {
+  margin-bottom: 3rem;
 }
 
 :where(.MarkpromptMessagePromptText) {
@@ -1136,7 +1139,6 @@
 
 :where(.MarkpromptPromptFeedback[data-variant='icons']) {
   margin-top: -0.25rem;
-  margin-bottom: -1rem;
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='text'] h3) {
@@ -1286,6 +1288,10 @@
 
 :where(.MarkpromptMessage:has(+ .MarkpromptMessage) .MarkpromptReferences) {
   padding-block-end: 1.5rem;
+}
+
+:where(.MarkpromptMessage:has(.MarkpromptMessageAnswerContainer)) {
+  padding-bottom: 2rem;
 }
 
 :where(.MarkpromptPromptView .MarkpromptReferences p) {
