--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -384,16 +384,16 @@
 }
 
 :where(.MarkpromptClose) {
-  color: var(--markprompt-mutedForeground);
+  color: var(--markprompt-foreground);
   background-color: var(--markprompt-muted);
-  padding: 0.25rem;
+  padding: 0.125rem 0.375rem;
   border-style: solid;
   border-width: 1px;
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
   border-color: var(--markprompt-border);
-  text-transform: uppercase;
   cursor: pointer;
   display: grid;
+  font-weight: 600;
   place-items: center;
   transition-property: box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -401,8 +401,7 @@
 }
 
 :where(.MarkpromptClose:hover) {
-  opacity: 0.9;
-  color: var(--markprompt-foreground);
+  opacity: 0.8;
 }
 
 :where(.MarkpromptClose:focus) {
@@ -411,7 +410,7 @@
 
 :where(.MarkpromptClose kbd) {
   font-weight: 600;
-  font-size: 0.5rem;
+  font-size: 0.675rem;
 }
 
 :where(.MarkpromptForm) {
