--- a/examples/with-next/pages/global.css
+++ b/examples/with-next/pages/global.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: hsl(0, 0%, 4%);
+  color: hsl(0deg 0% 4%);
   background-color: #fff;
   font-synthesis: none;
   text-rendering: optimizelegibility;
@@ -13,9 +13,9 @@
 
   --markprompt-background: #fff;
   --markprompt-foreground: #171717;
-  --markprompt-muted: hsl(0, 0%, 98%);
+  --markprompt-muted: hsl(0deg 0% 98%);
   --markprompt-mutedForeground: #808080;
-  --markprompt-border: hsl(0, 0%, 92%);
+  --markprompt-border: hsl(0deg 0% 92%);
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
@@ -25,7 +25,7 @@
   --markprompt-primaryHighlight: #ec4899;
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
-  --markprompt-ring: #0ea5e9;
+  --markprompt-ring: #b4b6f8;
   --markprompt-radius: 0.75rem;
   --markprompt-text-size: 0.875rem;
   --markprompt-text-size-xs: 0.75rem;
@@ -49,7 +49,7 @@
     --markprompt-primaryHighlight: #ec4899;
     --markprompt-secondaryHighlight: #a855f7;
     --markprompt-overlay: #00000040;
-    --markprompt-ring: #fff;
+    --markprompt-ring: #b4b6f8;
   }
 }
 
@@ -63,7 +63,7 @@ html {
   box-sizing: inherit;
 }
 
-*:not(pre):not(code):not(pre *):not(code *) {
+*:not(pre, code, pre *, code *) {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
@@ -90,16 +90,16 @@ body,
   align-items: center;
   min-width: 400px;
   font-size: 14px;
-  color: hsl(0, 0%, 50%);
+  color: hsl(0deg 0% 50%);
   background-color: var(--markprompt-muted);
-  border: 1px solid hsl(0, 0%, 92%);
+  border: 1px solid hsl(0deg 0% 92%);
   transition-property: all;
   transition-duration: 200ms;
 }
 
 #search:hover {
-  background-color: hsl(0, 0%, 96%);
-  border: 1px solid hsl(0, 0%, 90%);
+  background-color: hsl(0deg 0% 96%);
+  border: 1px solid hsl(0deg 0% 90%);
 }
 
 #search > span {
@@ -118,17 +118,14 @@ body,
   width: 16px;
   height: 16px;
   stroke-width: 2px;
-  color: hsl(0, 0%, 30%);
+  color: hsl(0deg 0% 30%);
 }
 
 #search kbd {
-  color: hsl(0, 0%, 30%);
+  color: hsl(0deg 0% 30%);
   border: 1px solid var(--markprompt-border);
-  background-color: hsl(0, 0%, 99%);
-  padding-left: 6px;
-  padding-right: 6px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  background-color: hsl(0deg 0% 99%);
+  padding: 3px 6px;
   font-size: 0.75rem;
   border-radius: 5px;
   font-family: unset;
