--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2,7 +2,7 @@
   --markprompt-background: #fff;
   --markprompt-foreground: #171717;
   --markprompt-muted: #fafafa;
-  --markprompt-mutedForeground: #888888;
+  --markprompt-mutedForeground: #888;
   --markprompt-border: #e5e5e5;
   --markprompt-border-accent: #cdcdcd;
   --markprompt-input: #fff;
@@ -37,7 +37,7 @@
     --markprompt-muted: #171717;
     --markprompt-mutedForeground: #808080;
     --markprompt-border: #262626;
-    --markprompt-border-accent: #444444;
+    --markprompt-border-accent: #444;
     --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
     --markprompt-primaryForeground: #fff;
@@ -299,7 +299,7 @@
   align-items: center;
   gap: 1rem;
   border-bottom: 1px solid var(--markprompt-border);
-  box-shadow: 0 7px 10px -1px rgb(0 0 0 / 0.03);
+  box-shadow: 0 7px 10px -1px rgb(0 0 0 / 3%);
 }
 
 :where(.MarkpromptChatViewChat) {
@@ -425,7 +425,7 @@
   align-items: stretch;
   padding: 1rem;
   border-top: 1px solid var(--markprompt-border);
-  box-shadow: 0 -7px 10px -1px rgb(0 0 0 / 0.03);
+  box-shadow: 0 -7px 10px -1px rgb(0 0 0 / 3%);
 }
 
 :where(.MarkpromptPromptWrapper) {
@@ -444,12 +444,12 @@
 
 :where(.MarkpromptSearchView .MarkpromptPromptWrapper) {
   border-bottom: 1px solid var(--markprompt-border);
-  box-shadow: 0 7px 10px -1px rgb(0 0 0 / 0.03);
+  box-shadow: 0 7px 10px -1px rgb(0 0 0 / 3%);
   padding: 2px 0.5rem 1px 0.875rem;
 }
 
 :where(.MarkpromptChatView .MarkpromptPromptWrapper):focus-within {
-  box-shadow: 0px 0px 0px 3px var(--markprompt-border);
+  box-shadow: 0 0 0 3px var(--markprompt-border);
   border-color: var(--markprompt-border-accent);
 }
 
@@ -575,6 +575,7 @@
 :where(.MarkpromptPrompt) {
   border: none;
   width: 100%;
+
   /*
     If the font-size of the prompt input is not at least 1rem (16px), Safari
     on iOS will automatically zoom to the prompt input
@@ -586,7 +587,7 @@
   padding: 1rem 0.75rem;
 }
 
-@media (min-width: 1024px) {
+@media screen and (width >= 1024px) {
   :where(.MarkpromptPrompt) {
     font-size: var(--markprompt-text-size);
   }
@@ -602,13 +603,10 @@
 
 :where(.MarkpromptPromptSubmitButton) {
   padding: 0.375rem 0.75rem;
-  border: none;
   outline: none;
   color: var(--markprompt-background);
   background-color: var(--markprompt-primary);
   border-radius: calc(var(--markprompt-radius) * 0.5);
-  transition-property: all;
-  transition-duration: 200ms;
   font-size: var(--markprompt-text-size);
   font-weight: 600;
   display: flex;
@@ -620,19 +618,22 @@
   white-space: nowrap;
 }
 
-.MarkpromptViews button:focus-visible {
+:where(.MarkpromptViews) button:focus-visible,
+:where(.MarkpromptViews) a:focus-visible {
   outline: none;
-  box-shadow: 0px 0px 0px 3px var(--markprompt-ring);
-}
-
-:where(.MarkpromptPromptWrapper) button:hover:not(:disabled) {
-  opacity: 80%;
+  box-shadow: 0 0 0 3px var(--markprompt-ring);
+  transition-property: all;
+  transition-duration: 200ms;
 }
 
 :where(.MarkpromptPromptWrapper) button:disabled {
   background-color: var(--markprompt-background);
   border: 1px solid var(--markprompt-border);
   color: var(--markprompt-border-accent);
+}
+
+:where(.MarkpromptPromptWrapper) button:hover:not(:disabled) {
+  opacity: 0.8;
 }
 
 :where(.MarkpromptPromptWrapper) button svg {
@@ -1185,10 +1186,7 @@
   border-radius: 0.375rem;
   color: var(--markprompt-mutedForeground);
   background-color: transparent;
-}
-
-:where(.MarkpromptGhostThumbButton) {
-  border: 0;
+  border: none;
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='text'] button) {
@@ -1217,8 +1215,7 @@
   color: var(--markprompt-foreground);
   border: none;
   display: flex;
-  align-items: center;
-  justify-items: center;
+  place-items: center;
   outline: none;
   background: transparent;
   border-radius: var(--markprompt-button-radius);
@@ -1306,9 +1303,6 @@
   margin: 0;
   margin-bottom: 0.5rem;
   padding-inline: 4rem 1rem;
-}
-
-.MarkpromptChatView .MarkpromptReferences p {
 }
 
 :where(.MarkpromptReferences ul) {
@@ -1617,7 +1611,7 @@
 }
 
 :where(.MarkpromptSearchResultSectionHeading) {
-  padding: 0px 8px;
+  padding: 0 8px;
   font-size: var(--markprompt-text-size-xs);
   margin-top: 1rem;
   margin-bottom: 0.25rem;
@@ -1695,7 +1689,7 @@
 
 :where(.MarkpromptNoSearchResults p) {
   color: var(--markprompt-mutedForeground);
-  padding: 0rem 1rem 0 0.5rem;
+  padding: 0 1rem 0 0.5rem;
 }
 
 :where(.MarkpromptNoSearchResults span) {
