--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -1935,6 +1935,46 @@
   animation: markprompt-spin 1s linear infinite;
 }
 
+:where(.MarkpromptReferences:has(+ .MarkpromptMessageCreateTicket)) {
+  padding-block-end: 1.5rem;
+}
+
+:where(.MarkpromptMessageCreateTicket) {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+  padding-inline: 4rem;
+}
+
+:where(.MarkpromptMessageCreateTicketDefaultText) {
+  margin-block: 0;
+  font-size: var(--markprompt-text-size-xs);
+  color: var(--markprompt-mutedForeground);
+}
+
+:where(.MarkpromptMessageCreateTicketButton) {
+  padding: 0.35rem 0.5rem 0.25rem;
+  border: 1px solid var(--markprompt-border);
+  border-radius: calc(var(--markprompt-radius) * 0.5);
+  background-color: white;
+  cursor: pointer;
+  color: var(--markprompt-foreground);
+}
+
+:where(.MarkpromptMessageCreateTicketButton):hover {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptMessageCreateTicketButton div) {
+  display: inline-grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 0.25rem;
+  font-size: var(--markprompt-text-size);
+  font-weight: 500;
+}
+
 :where(.MarkpromptCreateTicketView) {
   display: grid;
   grid-template-rows: auto 1fr;
