--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -393,7 +393,7 @@
   padding: 0.125rem 0.375rem;
   border-style: solid;
   border-width: 1px;
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   border-color: var(--markprompt-border);
   cursor: pointer;
   display: grid;
@@ -476,7 +476,7 @@
   flex-wrap: nowrap;
   font-weight: 500;
   padding: 0.5rem 1rem;
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   border: 1px solid var(--markprompt-border);
   background-color: var(--markprompt-background);
   color: var(--markprompt-foreground);
@@ -1192,7 +1192,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.375rem;
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   color: var(--markprompt-mutedForeground);
   background-color: transparent;
   border: none;
@@ -1245,7 +1245,6 @@
 :where(.MarkpromptBorderedButton) {
   color: var(--markprompt-foreground);
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.375rem;
   display: flex;
   place-items: center;
   outline: none;
@@ -1428,7 +1427,7 @@
   text-decoration: none;
   padding: 0.125rem 0.5rem;
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   color: var(--markprompt-primary);
   font-weight: 500;
   transition-property: opacity;
@@ -1616,7 +1615,7 @@
 
 :where(.MarkpromptSearchResultIconWrapperBordered) {
   background-color: var(--markprompt-background);
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   border-style: solid;
   border-color: var(--markprompt-border);
 }
@@ -1761,7 +1760,7 @@
   transition-duration: 200ms;
   background-color: var(--markprompt-background);
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   color: var(--markprompt-foreground);
   cursor: pointer;
   font-weight: 500;
@@ -1778,7 +1777,7 @@
   display: none;
   background-color: var(--markprompt-background);
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
   list-style-type: none;
@@ -1859,7 +1858,7 @@
   text-decoration: none;
   padding: 0.125rem 0.5rem;
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
   color: var(--markprompt-primary);
   font-weight: 500;
   transition-property: opacity;
@@ -1908,7 +1907,7 @@
   padding-block-end: 1rem;
   font-size: var(--markprompt-text-size);
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.375rem;
+  border-radius: var(--markprompt-button-radius);
 }
 
 :where(.MarkpromptToolDescriptionWithStatus) {
