--- a/examples/with-function-calling/pages/global.css
+++ b/examples/with-function-calling/pages/global.css
@@ -108,7 +108,7 @@ body,
   display: flex;
   gap: 4px;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .InputForm input {
@@ -133,7 +133,7 @@ body,
   display: flex;
   gap: 4px;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .OutputLogs {
